DPC-173: Added Practitioner Profile and updated FHIR IG (#125)
* DPC-173: Added practitioner profile

Basic profile has been created and is dynamically loaded by the Profile manager.

* DPC-173: Practitioner validation tests are passing.

* DPC-173: Added profile to generated practitioners

We now generate Practitioner resources with attached profiles, and we specify that they're required in our capability statement.

* DPC-173: Added Practitioner resource to IG

* DPC-255: Add Organization profile

Added Organization and Address profiles.

Loaded into DPC and wired into the IG.

* DPC-255: Added Endpoint and Address profiles

Also did a little bit of renaming to make the profiles a bit easier to read.

* DPC-255: Organization entity now includes profile information

* DPC-255: Organization and Endpoint validation tests are passing.

* DPC-255: Added profiles to Capabilities Statements

Also added the Patient endpoint to the Cap statement.

* DPC-173: Updated IG name and added publisher

Each Structure Definition needs to have the Publisher field set. Once that's done, we get some nicely formatted output.

* DPC-173: Fixed canonical URLs for Structure Definitions

* DPC-173: Added main description content

Also updated Navbar to have to additional, more interesting, tabs.

* DPC-173: Profile documentation has been updated.

* DPC-173: Updated Profile URIs

* DPC-174: Slim down patient profile requirements.

Rather than doing everything in DPC-258, we're just doing the bare minimum for now.

* DPC-173: Add Practitioner profile to resource

* DPC-173: Update Structure Definition tests and capability statement

* Test script cleanups and Error prone fixes

Cleaned up the CI test script so that it exits on first error.

Also, addressed some error-prone warnings that had fallen through the cracks.